# offers-marketplace-backend

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: __init__.py  main.py  models.py
backend/tests/: test_health.py
infra/: api_stack.py  app.py
lambdas/auth/: create_auth_challenge.py  define_auth_challenge.py  verify_auth_challenge.py
lambdas/common/: __init__.py  google.py  phone.py  resp.py
lambdas/http/: auth_google.py  auth_refresh.py  auth_start.py  auth_verify.py
scripts/: google_signin_test.html  smoke_test.py
